fix gap in cards and improve space

--- a/material-overrides/assets/stylesheets/kluster.css
+++ b/material-overrides/assets/stylesheets/kluster.css
@@ -100,7 +100,7 @@
 }
 
 .md-grid {
-  max-width: 60rem;
+  max-width: 66rem;
 }
 
 /* Header styling */
